src/test/ui/feature-gates/feature-gate-rustc-attrs.stderr
error[E0658]: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/feature-gate-rustc-attrs.rs:8:3
   |
LL | #[rustc::unknown]
   |   ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: expected attribute, found macro `rustc::unknown`
  --> $DIR/feature-gate-rustc-attrs.rs:8:3
   |
LL | #[rustc::unknown]
   |   ^^^^^^^^^^^^^^ not an attribute

error[E0658]: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/feature-gate-rustc-attrs.rs:13:12
   |
LL | #[unknown::rustc]
   |            ^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: expected attribute, found macro `unknown::rustc`
  --> $DIR/feature-gate-rustc-attrs.rs:13:3
   |
LL | #[unknown::rustc]
   |   ^^^^^^^^^^^^^^ not an attribute

error[E0658]: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/feature-gate-rustc-attrs.rs:20:3
   |
LL | #[rustc_unknown]
   |   ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: cannot find attribute `rustc_unknown` in this scope
  --> $DIR/feature-gate-rustc-attrs.rs:20:3
   |
LL | #[rustc_unknown]
   |   ^^^^^^^^^^^^^

error[E0658]: the `#[rustc_dummy]` attribute is just used for rustc unit tests and will never be stable
  --> $DIR/feature-gate-rustc-attrs.rs:18:1
   |
LL | #[rustc_dummy]
   | ^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
